force-app/main/default/objects/Universal_App_Field_Setting__mdt/Universal_App_Field_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Universal App Field Setting</label>
    <pluralLabel>Universal App Field Settings</pluralLabel>
</CustomObject>