force-app/main/default/objects/Universal_App_Field_Setting__mdt/fields/Accepted_File_Types__c.field-meta.xml
<CustomField>
    <fullName>Accepted_File_Types__c</fullName>
    <label>Accepted File Types</label>
    <length>80</length>
    <type>Text</type>
</CustomField>