force-app/main/default/objects/Universal_App_Field_Setting__mdt/fields/Expected_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Expected_Field_Label__c</fullName>
    <inlineHelpText>Expected label for the affected field</inlineHelpText>
    <label>Expected Field Label</label>
    <type>TextArea</type>
</CustomField>