force-app/main/default/objects/Universal_App_Field_Setting__mdt/fields/Field_Set__c.field-meta.xml
<CustomField>
    <fullName>Field_Set__c</fullName>
    <inlineHelpText>Field set the affected field is in</inlineHelpText>
    <label>Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>