force-app/main/default/objects/Universal_App_Field_Setting__mdt/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Target</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>_blank</fullName>
                <default>true</default>
                <label>_blank</label>
            </value>
            <value>
                <fullName>_self</fullName>
            </value>
            <value>
                <fullName>_parent</fullName>
            </value>
            <value>
                <fullName>_top</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>