force-app/main/default/objects/Universal_App_Field_Setting__mdt/fields/Universal_App_Section__c.field-meta.xml
<CustomField>
    <fullName>Universal_App_Section__c</fullName>
    <inlineHelpText>Universal App Section where the field will be</inlineHelpText>
    <label>Universal App Section</label>
    <referenceTo>Universal_App_Section__mdt</referenceTo>
    <relationshipLabel>Universal App Field Settings</relationshipLabel>
    <relationshipName>Universal_App_Field_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>