force-app/main/default/objects/Universal_App_Field_Setting__mdt/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>